--- a/view/partials/navbar.ejs
+++ b/view/partials/navbar.ejs
@@ -25,8 +25,8 @@
                     <i class="icon-bars"></i>
                 </button>
 
-                <a href="index.html" class="logo">
-                    <img src="/user/assets/images/logo.png" alt="Molla Logo" width="105" height="25">
+                <a href="" class="logo">
+                    <img src="\user\assets\images\DivineStyle.png" alt="Divine Style Logo" width="105" height="10">
                 </a>
 
                 <nav class="main-nav">
@@ -38,7 +38,7 @@
                             <a href="/allproducts">Shop</a>
                         </li>
                         <li >
-                            <a href="/contact">Contact</a>
+                            <a href="/contactUs">Contact</a>
                         </li>
                         <li >
                             <a href="/aboutUs">About Us</a>
