--- a/view/partials/adminFooter.ejs
+++ b/view/partials/adminFooter.ejs
@@ -18,6 +18,7 @@
 <script src="/admin/assets/js/dashboard.js"></script>
 <!-- End custom js for this page -->
 
+<!-- sweet alert -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </body>
