--- a/view/partials/mobileNavbar.ejs
+++ b/view/partials/mobileNavbar.ejs
@@ -21,7 +21,7 @@
                  </li>
                  
                  <li>
-                     <a href="/contact">Contact</a>
+                     <a href="/contactUs">Contact</a>
                  </li>
                  <li>
                      <a href="/aboutUs">About Us</a>
