--- a/view/user/login.ejs
+++ b/view/user/login.ejs
@@ -9,7 +9,7 @@
        
 
         <main class="main">
-            <nav aria-label="breadcrumb" class="breadcrumb-nav border-0 mb-0">
+            <nav aria-label="breadcrumb" class="breadcrumb-nav border-0 mb-0" hidden>
                 <div class="container">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="/">Home</a></li>
