--- a/view/user/resetPassword.ejs
+++ b/view/user/resetPassword.ejs
@@ -5,7 +5,7 @@
 
     <div class="page-wrapper">
         <main class="main">
-            <nav aria-label="breadcrumb" class="breadcrumb-nav border-0 mb-0">
+            <nav aria-label="breadcrumb" class="breadcrumb-nav border-0 mb-0" hidden>
                 <div class="container">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
