--- a/view/admin/coupons.ejs
+++ b/view/admin/coupons.ejs
@@ -110,6 +110,34 @@
 
                 </div>
 
+                <nav aria-label="Page navigation" style="margin-left: 30px;">
+                  <ul class="pagination">
+                      <% if (totalPages > 1) { %>
+                          <% if (currentPage > 1) { %>
+                              <li class="page-item">
+                                  <a class="page-link" href="?page=<%= currentPage - 1 %>" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                  </a>
+                              </li>
+                          <% } %>
+              
+                          <% for (let i = 1; i <= totalPages; i++) { %>
+                              <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+                                  <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+                              </li>
+                          <% } %>
+              
+                          <% if (currentPage < totalPages) { %>
+                              <li class="page-item">
+                                  <a class="page-link" href="?page=<%= currentPage + 1 %>" aria-label="Next">
+                                      <span aria-hidden="true">&raquo;</span>
+                                  </a>
+                              </li>
+                          <% } %>
+                      <% } %>
+                  </ul>
+                </nav>
+
                 
 
               </div>
