--- a/view/user/profile.ejs
+++ b/view/user/profile.ejs
@@ -198,60 +198,106 @@
 													</div>
 												<% }) %>
 											</div>
+                                            <nav aria-label="Page navigation">
+                                                <ul class="pagination">
+                                                    <% for (let i = 1; i <= totalOrdersPages; i++) { %>
+                                                        <li class="page-item <%= ordersCurrentPage === i ? 'active' : '' %>">
+                                                            <a class="page-link" href="/userProfile?ordersPage=<%= i %>#tab-orders"><%= i %></a>
+                                                        </li>
+                                                    <% } %>
+                                                </ul>
+                                            </nav>
+                                            
 										</section>
 									</div>
-									
-									
-
-								    <div class="tab-pane fade" id="tab-coupons" role="tabpanel" aria-labelledby="tab-coupons-link">
-								    	<!-- <%if(coupon){%>
-                                            <%coupon.forEach(coupon=>{%>
-                
-                                        <div class="card mt-5 mx-3" style="width: 87%;">
-                                            <div class="card-body">
-                                              <span class="card-title mt-1">CouponName: &nbsp; <%=coupon.name%></span>
-                                              <p class="card-text">couponCode: &nbsp; <%=coupon.code%></p>
-                                              <p class="card-text">discountamount:  &nbsp; <%=coupon.discountAmount%></p>
-                                              <p class="card-text">minAmount: &nbsp;<%=coupon.minAmount%></p>
-                                              <p class="card-text">couponDescription: &nbsp; <%=coupon.description%></p>
-                                              <p class="card-text">expiryDate: &nbsp; <%=coupon.expiryDate.toLocaleDateString('en-US',{year:'numeric',month: 'short',day: '2-digit'}).replace(/\//g, '-')%></p>
-                                            </div>
-                                          </div>
-                
-                                          <%})%>
-                                          <%}else{%>
-                                            <h3><p>No coupons available yet.</p></h3>                                        
-								    	    <a href="/" class="btn btn-outline-primary-2"><span>GO SHOP</span><i class="icon-long-arrow-right"></i></a>
-                                          <%}%> -->
 
 
-                                          <% if (coupon && coupon.length > 0) { %>
-                                            <div class="container ">
-                                              <div class="row">
+                                    <!-- <div class="tab-pane fade" id="tab-coupons" role="tabpanel" aria-labelledby="tab-coupons-link">
+                                        <div class="container my-4">
+                                            <% if (coupon && coupon.length > 0) { %>
                                                 <% coupon.forEach(coupon => { %>
-                                                  <div class="col-md-6 col-lg-4 ">
-                                                    <div class="card h-100 shadow-sm">
-                                                      <div class="card-body">
-                                                        <h5 class="card-title font-weight-bold text-primary">Coupon: <%= coupon.name %></h5>
-                                                        <p class="card-text"><strong>Code:</strong> <%= coupon.code %></p>
-                                                        <p class="card-text"><strong>Discount:</strong> <%= coupon.discountAmount %></p>
-                                                        <p class="card-text"><strong>Minimum Spend:</strong> <%= coupon.minAmount %></p>
-                                                        <p class="card-text"><strong>Description:</strong> <%= coupon.description %></p>
-                                                        <p class="card-text"><strong>Expiry Date:</strong> <%= coupon.expiryDate.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></p>
-                                                      </div>
+                                                    <div class="card mb-4 mx-auto shadow-sm" style="width: 90%;">
+                                                        <div class="card-body">
+                                                            <h5 class="card-title">Coupon Name: <%= coupon.name %></h5>
+                                                            <p class="card-text"><strong>Code:</strong> <%= coupon.code %></p>
+                                                            <p class="card-text"><strong>Discount Amount:</strong> ₹<%= coupon.discountAmount %></p>
+                                                            <p class="card-text"><strong>Minimum Amount:</strong> ₹<%= coupon.minAmount %></p>
+                                                            <p class="card-text"><strong>Description:</strong> <%= coupon.description %></p>
+                                                            <p class="card-text"><strong>Expiry Date:</strong> <%= coupon.expiryDate.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></p>
+                                                        </div>
                                                     </div>
-                                                  </div>
                                                 <% }) %>
-                                              </div>
-                                            </div>
-                                          <% } else { %>
-                                            <div class="text-center mt-5">
-                                              <h3>No coupons available yet.</h3>
-                                              <a href="/allProducts" class="btn btn-outline-primary mt-3"><span>GO SHOP</span><i class="icon-long-arrow-right ml-2"></i></a>
-                                            </div>
-                                          <% } %>
-                                          
-								    </div><!-- .End .tab-pane -->
+                                            <% } else { %>
+                                                <div class="text-center">
+                                                    <h3>No coupons available yet.</h3>
+                                                    <a href="/" class="btn btn-outline-primary-2 mt-4">
+                                                        <span>GO SHOP</span>
+                                                        <i class="icon-long-arrow-right"></i>
+                                                    </a>
+                                                </div>
+                                            <% } %>
+                                            
+                                        </div>
+                                        <nav aria-label="Page navigation">
+                                            <ul class="pagination">
+                                                <% for (let i = 1; i <= totalCouponsPages; i++) { %>
+                                                    <li class="page-item <%= couponsCurrentPage === i ? 'active' : '' %>">
+                                                        <a class="page-link" href="/userProfile?couponsPage=<%= i %>#tab-coupons"><%= i %></a>
+                                                    </li>
+                                                <% } %>
+                                            </ul>
+                                        </nav>
+                                    </div> -->
+
+
+
+
+                                    <div class="tab-pane fade" id="tab-coupons" role="tabpanel" aria-labelledby="tab-coupons-link">
+                                        <div class="container my-4">
+                                            <% if (coupon && coupon.length > 0) { %>
+                                                <div class="row">
+                                                    <% coupon.forEach((coupon, index) => { %>
+                                                        <div class="col-md-6 col-lg-4 mb-4">
+                                                            <div class="card shadow-sm h-100" style="border-radius: 16px;">
+                                                                <div class="card-body">
+                                                                    <h5 class="card-title" >Coupon Name: <%= coupon.name %></h5>
+                                                                    <p class="card-text"><strong>Code:</strong> <%= coupon.code %></p>
+                                                                    <p class="card-text"><strong>Discount Amount:</strong> ₹<%= coupon.discountAmount %></p>
+                                                                    <p class="card-text"><strong>Minimum Amount:</strong> ₹<%= coupon.minAmount %></p>
+                                                                    <p class="card-text"><strong>Description:</strong> <%= coupon.description %></p>
+                                                                    <p class="card-text"><strong>Expiry Date:</strong> <%= coupon.expiryDate.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %></p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <% if ((index + 1) % 2 === 0) { %>
+                                                            <div class="w-100"></div>
+                                                        <% } %>
+                                                    <% }) %>
+                                                </div>
+                                            <% } else { %>
+                                                <div class="text-center">
+                                                    <h3>No coupons available yet.</h3>
+                                                    <a href="/" class="btn btn-outline-primary-2 mt-4">
+                                                        <span>GO SHOP</span>
+                                                        <i class="icon-long-arrow-right"></i>
+                                                    </a>
+                                                </div>
+                                            <% } %>
+                                        </div>
+                                        <% if (totalCouponsPages > 1) { %>
+                                            <nav aria-label="Page navigation">
+                                                <ul class="pagination justify-content-center">
+                                                    <% for (let i = 1; i <= totalCouponsPages; i++) { %>
+                                                        <li class="page-item <%= couponsCurrentPage === i ? 'active' : '' %>">
+                                                            <a class="page-link" href="/userProfile?couponsPage=<%= i %>#tab-coupons"><%= i %></a>
+                                                        </li>
+                                                    <% } %>
+                                                </ul>
+                                            </nav>
+                                        <% } %>
+                                    </div>
+                                    
+                                    
 
 
 									
@@ -330,7 +376,7 @@
 																			<input type="text" class="form-control" id="editcity-<%=Address._id%>" value="<%=Address.city%>" name="city" required>
 																			<span id="cityValidationMessage" class=" text-danger p-3 validation-message"></span>
 																		</div>
-																		<button  class="btn btn-primary" onclick="validateEditAddressForm('<%=Address._id%>')">Save Changes</button>
+																		<button  class="btn btn-primary" onclick="editAddressForm('<%=Address._id%>')">Save Changes</button>
 																	</div>
 																</div>
 															</div>
@@ -455,9 +501,78 @@
 
 <%-include('../partials/footer')%>
 
+
+<script src="/path/to/your/js/jquery.js"></script>
+<script src="/path/to/your/js/bootstrap.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script>
+
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const url = new URL(window.location.href);
+            const activeTab = url.hash || '#tab-dashboard'
+            document.querySelectorAll('.nav-link').forEach(link => link.classList.remove('active'));
+            document.querySelectorAll('.tab-pane').forEach(tab => tab.classList.remove('show', 'active'));
+
+            const targetLink = document.querySelector(`a[href="${activeTab}"]`);
+            const targetTab = document.querySelector(activeTab);
+
+            if (targetLink && targetTab) {
+                targetLink.classList.add('active');
+                targetTab.classList.add('show', 'active');
+            }
+        });
+        
+        
+       
+
+function editAddressForm(addressId) {
+    const name = document.getElementById(`editname-${addressId}`).value;
+    const phone = document.getElementById(`editphone-${addressId}`).value;
+    const email = document.getElementById(`editemail-${addressId}`).value;
+    const address = document.getElementById(`editaddress-${addressId}`).value;
+    const pincode = document.getElementById(`editpincode-${addressId}`).value;
+    const state = document.getElementById(`editstate-${addressId}`).value;
+    const city = document.getElementById(`editcity-${addressId}`).value;
+
+
+    let editForm = {
+        name: name,
+        phone: phone,
+        email: email,
+        address: address,
+        pincode: pincode,
+        state: state,
+        city: city,
+        addressId: addressId
+    }
+
+    fetch('/editAddress', {
+        method: "POST",
+        headers: {
+            'Content-Type': 'application/json',
+        },
+        body: JSON.stringify(editForm)
+    })
+    .then(response => response.json())
+    .then(data => {
+        console.log(data);
+        swal.fire({
+            title: "Success",
+            text: data.message || "Address updated successfully",
+            icon: "success",
+            timer: 1000,
+            showConfirmButton: false 
+        }).then(() => {
+			window.location.reload()
+        });
+    })
+    .catch(error => {
+        console.error("Error:", error);
+    });
+    $(`#editAddressModal${addressId}`).modal('hide');
+}
+
 
 
     function displayErrorMessage(message, errorMessageElement) {
@@ -729,7 +844,7 @@ function isPasswordStrong(password) {
 }
 
 
-function validateForm() {
+    function validateForm() {
         let name = document.getElementById("formname").value;
         let phone = document.getElementById("formphone").value;
         let email = document.getElementById("formemail").value;
