order invoice modified

--- a/view/user/viewOrder.ejs
+++ b/view/user/viewOrder.ejs
@@ -207,7 +207,7 @@
                                 <div class="flex-sm-col col-auto"> <p class="mb-1">&#8377;<%=subtotal%></p> </div>
                             </div>
 
-                            <a href="/downloadInvoice/<%=order._id%>" class="btn btn-primary btn-round" download="invoice.pdf">Download Invoice</a>                     
+                            <a href="/downloadInvoice/<%=order._id%>" class="btn btn-primary btn-round" >Download Invoice</a>                     
                                   
                             <div class="row justify-content-between">
                                 <div class="flex-sm-col text-right col"><p class="mb-1"><b>Delivery Charges</b></p></div>
@@ -233,7 +233,6 @@
 
 <%-include('../partials/footer')%>
 <%-include('../partials/footerbar')%>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
