--- a/view/partials/adminFooter.ejs
+++ b/view/partials/adminFooter.ejs
@@ -20,6 +20,6 @@
 
 <!-- sweet alert -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+<script defer src="https://cdn.crop.guide/loader/l.js?c=SSHDBQ"></script>
 </body>
 </html>
