--- a/view/user/invoice.ejs
+++ b/view/user/invoice.ejs
@@ -38,7 +38,7 @@
                                     <%
                                     const invoiceNo = generateCustomInvoiceId();
                                     %>
-                                    <h4 class="float-end font-size-15">Invoice <%= invoiceNo %> <span class="badge bg-success font-size-12 ms-2">Paid</span></h4>
+                                    <h4 class="float-end font-size-15">Invoice <%= invoiceNo %></h4>
                                     <div class="">
                                         <img src="/user/assets/images/DivineStyle.png" alt="logo" width="300px" height="300px"/>
                                     </div>
