--- a/view/admin/allorders.ejs
+++ b/view/admin/allorders.ejs
@@ -181,7 +181,7 @@ function updateStatus(status, orderId, productId) {
         }
         
         console.log('Status updated successfully');
-        wiwndow.location.reload()
+        window.location.reload()
     })
     .catch(error => {
         console.error('Error updating status:', error);
